[gd_scene load_steps=13 format=3 uid="uid://cokrkfsvkobhm"]

[ext_resource type="Texture2D" uid="uid://bb2ym30t36v88" path="res://kenney_particle-pack/PNG (Transparent)/spark_02.png" id="1_2fxfg"]
[ext_resource type="Script" path="res://drones/shite_drone/zap_ball/zap_ball.gd" id="1_o4k4j"]
[ext_resource type="AudioStream" uid="uid://d22f8d78cgbnp" path="res://drones/shite_drone/ball_of_electricity.mp3" id="2_v4fyf"]

[sub_resource type="Curve" id="Curve_pvduq"]
_data = [Vector2(0, 0.648892), 0.0, 0.269622, 0, 0, Vector2(1, 1), 0.345895, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_w57ln"]
curve = SubResource("Curve_pvduq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5xttu"]
emission_shape_scale = Vector3(0.2, 0.2, 0.2)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_w57ln")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3pada"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(1, 1, 0.921569, 0.211765)
albedo_texture = ExtResource("1_2fxfg")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_8pj5o"]
material = SubResource("StandardMaterial3D_3pada")
size = Vector2(2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jqss2"]
metallic = 1.0
roughness = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_wptoi"]
material = SubResource("StandardMaterial3D_jqss2")
radius = 0.25
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_bivxn"]
radius = 0.125

[sub_resource type="SphereShape3D" id="SphereShape3D_07aat"]
radius = 0.608125

[node name="ZapBall" type="RigidBody3D"]
collision_layer = 4
collision_mask = 5
max_contacts_reported = 2
script = ExtResource("1_o4k4j")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 50
lifetime = 2.0
speed_scale = 3.55
local_coords = true
process_material = SubResource("ParticleProcessMaterial_5xttu")
draw_pass_1 = SubResource("QuadMesh_8pj5o")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_wptoi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("SphereShape3D_bivxn")

[node name="ElectricityAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_v4fyf")
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_07aat")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
